[gd_scene load_steps=19 format=3 uid="uid://chenbcu36627c"]

[ext_resource type="Script" uid="uid://cex1bkgmgbrq2" path="res://Scenes/Character/Enemy/Enemy.gd" id="1_ghg1f"]
[ext_resource type="Texture2D" uid="uid://dkry738lk1ete" path="res://Scenes/Character/Enemy/Medium/Rat_Med/Rat.png" id="2_lq07w"]
[ext_resource type="Script" uid="uid://bgox7ty3piajd" path="res://Scenes/Character/CharacterStats.gd" id="3_uhhdc"]
[ext_resource type="Script" uid="uid://bh80q01mwti4q" path="res://Scenes/Character/Enemy/EnemyAttack.gd" id="4_xa7qo"]
[ext_resource type="Script" uid="uid://ddjgxp2c8n7uj" path="res://Scenes/Weapon/Weapon.gd" id="5_3dr14"]
[ext_resource type="PackedScene" uid="uid://dlweiwdwse41w" path="res://Scenes/Weapon/_Hits/slash.tscn" id="6_3rtpd"]
[ext_resource type="Script" uid="uid://b316g7ijpxpy4" path="res://Scenes/Weapon/WeaponStats.gd" id="7_fdo4h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wee41"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lq07w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i5men"]

[sub_resource type="Animation" id="Animation_0kpiw"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Sprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 1, 0, 0.1, 1, 0, 0.8, 0, 0.2, 1, 0, 1, 0, 0.3, 1, 0, 0.8, 0, 0.4, 1, 0, 1, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.383, 0, 0, 0.924, 0.1, 1, -0.379, -0.05, -0.121, 0.916, 0.2, 1, -0.383, 0, 0, 0.924, 0.3, 1, -0.379, 0.05, 0.121, 0.916, 0.4, 1, -0.383, 0, 0, 0.924)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqr71"]
_data = {
&"Walk": SubResource("Animation_0kpiw")
}

[sub_resource type="Animation" id="Animation_8vurq"]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View/Sprite:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_30x3r"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.5058824, 0.5058824, 0.5058824, 0.44313726)]
}

[sub_resource type="Animation" id="Animation_lq7hj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("View:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("View/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vurq"]
_data = {
&"Damage": SubResource("Animation_8vurq"),
&"Death": SubResource("Animation_30x3r"),
&"RESET": SubResource("Animation_lq7hj")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_58y3j"]
height = 1.0
radius = 8.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lxplw"]
height = 1.0
radius = 14.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8vurq"]
height = 1.0
radius = 1.0

[node name="Rat" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_ghg1f")

[node name="View" type="Node3D" parent="."]

[node name="Sprite" type="AnimatedSprite3D" parent="View"]
unique_name_in_owner = true
transform = Transform3D(0.9908228, 0.13516717, 0.00010331717, -0.09566624, 0.7007263, 0.70698655, 0.09548903, -0.7005083, 0.7072265, 0, 0.89673185, 0)
pixel_size = 0.05
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_wee41")
autoplay = "default"

[node name="CharacterStats" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_uhhdc")
SPEED = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_i5men")

[node name="Walk Animation Player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sqr71")
}

[node name="Status Animation Player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8vurq")
}

[node name="Detection" type="Node3D" parent="."]

[node name="CloseDetection" type="Area3D" parent="Detection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detection/CloseDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_58y3j")

[node name="FarDetection" type="Area3D" parent="Detection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Detection/FarDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_lxplw")

[node name="LOS_Raycast" type="RayCast3D" parent="Detection"]
unique_name_in_owner = true

[node name="Attack" type="Node3D" parent="." node_paths=PackedStringArray("close_weapon")]
unique_name_in_owner = true
script = ExtResource("4_xa7qo")
attack_cd = 0.6
close_weapon = NodePath("Claws")

[node name="CloseDetection" type="Area3D" parent="Attack"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Attack/CloseDetection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_8vurq")

[node name="AttackTimer" type="Timer" parent="Attack"]

[node name="Claws" type="Node3D" parent="Attack"]
script = ExtResource("5_3dr14")
attack_hit = ExtResource("6_3rtpd")
metadata/_custom_type_script = "uid://ddjgxp2c8n7uj"

[node name="WeaponStats" type="Node" parent="Attack/Claws"]
unique_name_in_owner = true
script = ExtResource("7_fdo4h")
target_layer = 2
base_damage = 1
knockback = 20.0
metadata/_custom_type_script = "uid://b316g7ijpxpy4"

[node name="Hits" type="Node" parent="Attack/Claws"]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true

[node name="NavTimer" type="Timer" parent="NavigationAgent3D"]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Detection/CloseDetection" to="." method="_on_close_detection_body_entered"]
[connection signal="body_exited" from="Detection/CloseDetection" to="." method="_on_close_detection_body_exited"]
[connection signal="body_entered" from="Detection/FarDetection" to="." method="_on_far_detection_body_entered"]
[connection signal="body_exited" from="Detection/FarDetection" to="." method="_on_far_detection_body_exited"]
[connection signal="body_entered" from="Attack/CloseDetection" to="Attack" method="_on_close_detection_body_entered"]
[connection signal="body_exited" from="Attack/CloseDetection" to="Attack" method="_on_close_detection_body_exited"]
[connection signal="timeout" from="Attack/AttackTimer" to="Attack" method="_on_attack_timer_timeout"]
[connection signal="timeout" from="NavigationAgent3D/NavTimer" to="." method="_on_timer_timeout"]
